# nfc-text

./: ChangeLog.md  README.md  default.nix  nfc-text.cabal
Data/: NText.hs
