
name:                nfc-text
version:             0.1.0.0
synopsis:            NFC normalized text
-- description:         
license:             MIT
license-file:        LICENSE
author:               
maintainer:           
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10


library
  exposed-modules:     Data.NText
  build-depends:       base               >=4.9 && <4.10
  build-depends:       text               >=1.2 && <1.3
  build-depends:       hashable           >=1.2 && <1.3
  build-depends:       deepseq            >=1.4 && <1.5
  build-depends:       unicode-transforms >= 0.3.2 && < 0.4
  default-language:    Haskell2010
 
